# synth_cli

./: CMakeLists.txt  README.md  binary_reader.cpp  binary_reader.h  fill.cpp  fill.h  fs.cpp  fs.h  main.cpp  nki_extract.cpp  nki_extract.h  pcm.cpp  pcm.h
include/sfs/: sfs.c  sfs.h
include/solfege/: solfege.c  solfege.h
include/synthinf/: serrno.c  serrno.h  types.h
workdir/instruments/nkiex-kronos-stereohybridbass/: 30_140.json  30_255.json  36_140.json  36_255.json  42_140.json  42_255.json  48_140.json  48_255.json  54_140.json  54_255.json  60_140.json  60_255.json  66_140.json  66_255.json  72_140.json  72_255.json  78_140.json  78_255.json  84_140.json  84_255.json  90_140.json  90_255.json  96_140.json  96_255.json  instrument.json
workdir/instruments/nkiex-roland-orgflutes1/: 103_255.json  26_255.json  33_255.json  40_255.json  47_255.json  54_255.json  61_255.json  68_255.json  75_255.json  82_255.json  89_255.json  96_255.json  instrument.json
